--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 .page-wrapper {
-	margin: 10px auto;
-	width: 800px;
+  margin: 10px auto;
+  width: 800px;
 }
 
 .page-header {
@@ -31,7 +31,7 @@ body {
 }
 
 .hidden {
-	display: none;
+  display: none;
 }
 
 .button,
@@ -66,6 +66,46 @@ body {
   padding-top: 0;
 }
 
+.button--close {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  position: relative;
+  background-color: rgba(72,61,139, 0.5);
+}
+
+.button--close:hover {
+  background-color: rgba(72,61,139, 0.7);
+}
+
+.button--close:active {
+  background-color: rgba(72,61,139, 0.9);
+}
+
+.button--close::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 18px;
+  width: 2px;
+  height: 25px;
+  border: 1px solid #F5F5F5;
+  background-color: #F5F5F5;
+  transform: rotate(45deg);
+}
+
+.button--close::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 18px;
+  width: 2px;
+  height: 25px;
+  border: 1px solid #F5F5F5;
+  background-color: #F5F5F5;
+  transform: rotate(-45deg);
+}
+
 .search__field {
   padding: 0 10px;
   width: 280px;
@@ -75,8 +115,8 @@ body {
 }
 
 .catalog {
-	display: table;
-	border-collapse: collapse;
+  display: table;
+  border-collapse: collapse;
   margin: 0 auto;
 }
 
@@ -85,13 +125,13 @@ body {
 }
 
 .catalog__header ul {
-	display: table-row;
+  display: table-row;
 }
 
 .catalog__header li {
-	display: table-cell;
-	border: 1px solid  #A9A9A9;
-	padding: 20px 10px;
+  display: table-cell;
+  border: 1px solid  #A9A9A9;
+  padding: 20px 10px;
 }
 
 .catalog__product li {
@@ -101,7 +141,7 @@ body {
 }
 
 .catalog__caption {
-	width: 220px;
+  width: 220px;
 
 }
 
@@ -111,7 +151,6 @@ body {
 
 .catalog__caption--price {
   width: 150px;
-
 }
 
 .catalog__captions h2 {
@@ -140,7 +179,7 @@ body {
   content: "";
   display: inline-block;
   position: absolute;
-  border: 20px solid #778899;
+  border: 20px solid rgba(72,61,139, 0.6);
   border-right-width: 10px;
   border-left-width: 10px;
   border-right-color: transparent;
@@ -151,14 +190,14 @@ body {
 
 .catalog__arrow-name:hover::before,
 .catalog__arrow-price:hover::before {
-  border-bottom-color: #708090;
+  border-bottom-color: rgba(72,61,139, 0.8);;
 }
 
 .catalog__arrow-price::before {
   content: "";
   display: inline-block;
   position: absolute;
-  border: 20px solid #778899;
+  border: 20px solid rgba(72,61,139, 0.6);
   border-right-width: 10px;
   border-left-width: 10px;
   border-right-color: transparent;
@@ -175,7 +214,7 @@ body {
 }
 
 .catalog__product {
-	display: table-header-group;
+  display: table-header-group;
 }
 
 .product--hidden {
@@ -183,7 +222,7 @@ body {
 }
 
 .catalog__product ul {
-	display: table-row;
+  display: table-row;
 }
 
 .catalog__product:hover {
@@ -208,9 +247,9 @@ body {
 }
 
 .product__count {
-  width: 20px;
   margin: 0;
-  border-radius: 10px;
+  padding: 2px 7px;
+  border-radius: 50%;
   border: 1px solid #3CB371;
   text-align: center;
   color: #FFFFFF;
@@ -219,13 +258,26 @@ body {
 
 .add-update {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.8);
+  border: none;
+}
+
+.add-update-wrapper {
+  display: flex;
   margin: 20px auto;
-  padding: 10px;
-  width: 714px;
-  height: 103px;
+  padding: 30px;
+  width: 500px;
+  height: 380px;
   font-size: 18px;
   background-color: #E6E6FA;
-  border: 1px solid #E6E6FA;
+  border: 2px solid #DCDCDC;
   border-radius: 2px;
 }
 
@@ -235,18 +287,30 @@ body {
 
 .add-update__form {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.add-update__form-wrapper {
+  display: flex;
   flex-direction: column;
 }
 
-.add-update__count {
-  margin-left: 102px;
-  margin-right: 45px;
+.add-update__name-field,
+.add-update__count-field,
+.add-update__price-field {
+  background-color: #FFFFFF;
 }
 
-.add-update__wrapper-input {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
+.add-update__name {
+  margin-bottom: 15px;
+}
+
+.add-update__count,
+.add-update__price {
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .add-update__name-field {
@@ -264,6 +328,7 @@ body {
 }
 
 .add-update__price-field {
+  width: 200px;
   padding: 10px;
   border: 1px solid #708090;
   border-radius: 2px;
@@ -273,6 +338,7 @@ body {
   width: 150px;
   height: 50px;
   font-size: 18px;
+  margin-top: 20px;
 }
 
 .add-update__description {
